FIX main page align center in all res

--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 7%;
-    margin-bottom: 19rem;
+}
+
+.div_main {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
 }
 
 .logo {
@@ -78,6 +84,7 @@ body {
 
 .div_button_telegram {
     margin-top: 3rem;
+    margin-bottom: 4rem;
     font-family: 'classic';
     font-weight: 800;
     display: flex;
